objects/MHolt__GPT_Response__c.object
<CustomObject>
    <fields>
        <fullName>MHolt__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>GPT Responses</relationshipLabel>
        <relationshipName>GPT_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MHolt__Input__c</fullName>
        <label>Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MHolt__Raw_Response__c</fullName>
        <label>Raw Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MHolt__Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>GPT Response</label>
    <nameField>
        <displayFormat>GPT-{0000}</displayFormat>
        <label>GPT Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GPT Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>